--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "number-generator": "^4.0.6"
   }
 }
